# joo-coin

./: .gitignore  README.md  coin.py  docker-compose.yml  mvp.py  pyproject.toml
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  coin.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2479907a687b_add_coin_amount_to_balances.py  5a7839725665_make_coin_id_and_trade_type_nullable.py  7309eda69c9a_add_status_and_execution_reason_to_trades.py  7cf1639cbeec_add_is_deleted_to_coins.py  9f321772914d_add_none_to_risk_level_enum.py  a5618c7dd872_initial_schema.py
backend/app/: main.py
backend/app/ai/client/: open_ai_client.py
backend/app/ai/const/: constans.py
backend/app/ai/dto/: ai_analysis_response.py
backend/app/ballance/controller/: balance_controller.py
backend/app/ballance/dto/: balance_response.py
backend/app/ballance/model/: balance.py
backend/app/ballance/repository/: balance_repository.py
backend/app/ballance/service/: balance_service.py
backend/app/coin/controller/: my_coin_controller.py
backend/app/coin/dto/: coin_dto.py
backend/app/coin/model/: coin.py
backend/app/coin/repository/: coin_repository.py
backend/app/coin/service/: coin_service.py
backend/app/common/: named_lock.py
backend/app/common/model/: base.py
backend/app/common/repository/: base_repository.py
backend/app/configs/: app.py  config.py  scheduling_tasks.py
backend/app/database/models/: balance.py  enums.py  trade.py
backend/app/database/repositories/: balance_repository.py  base_repository.py  (+2 more)
backend/tests/: conftest.py
(+36 files in other folders)
